src/scope/snapshots/rnix_analyzer__scope__tests__scope_nested.snap
---
source: src/scope/mod.rs
expression: scopes.0
---
[
    Scope {
        kind: Lambda,
        defines: {
            "a": Definition {
                id: 0,
                name: "a",
                text_range: [1; 2),
            },
            "b": Definition {
                id: 1,
                name: "b",
                text_range: [15; 16),
            },
        },
        text_range: [0; 85),
    },
    Scope {
        kind: With,
        defines: {},
        text_range: [30; 85),
    },
    Scope {
        kind: LetIn,
        defines: {
            "c": Definition {
                id: 2,
                name: "c",
                text_range: [56; 57),
            },
        },
        text_range: [52; 85),
    },
    Scope {
        kind: Lambda,
        defines: {
            "d": Definition {
                id: 3,
                name: "d",
                text_range: [60; 61),
            },
        },
        text_range: [60; 71),
    },
]
