src/scope/snapshots/rnix_analyzer__scope__tests__scope_recursive_attr_set-2.snap
---
source: src/scope/mod.rs
expression: scope_tree
---
InverseScopeTree {
    leaf_scopes: [
        [
            Scope {
                kind: RecursiveAttrSet,
                defines: {
                    "a": Definition {
                        id: 0,
                        name: "a",
                        text_range: [18; 19),
                    },
                    "b": Definition {
                        id: 1,
                        name: "b",
                        text_range: [37; 38),
                    },
                    "c": Definition {
                        id: 2,
                        name: "c",
                        text_range: [56; 57),
                    },
                },
                text_range: [0; 72),
            },
        ],
    ],
}
