src/scope/snapshots/rnix_analyzer__scope__tests__scope_scope_lambda_pattern_at_error_already_defined.snap
---
source: src/scope/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"

---
{a, b}@a: a + b + c.a
=========
[
    Scope(
        AlreadyDefined(
            Lambda,
            "a",
            7..8,
            1..2,
        ),
    ),
]
