src/scope/snapshots/rnix_analyzer__scope__tests__scope_scope_lambda_pattern_error_already_defined.snap
---
source: src/scope/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"

---
{a, a}: a + a
=========
[
    Scope(
        AlreadyDefined(
            Lambda,
            "a",
            4..5,
            1..2,
        ),
    ),
]
