src/scope/snapshots/rnix_analyzer__scope__tests__scope_with-2.snap
---
source: src/scope/mod.rs
expression: scope_tree
---
InverseScopeTree {
    leaf_scopes: [
        [
            Scope {
                kind: With,
                defines: {},
                text_range: [0; 16),
            },
        ],
    ],
}
